Fill organizers in event types